--- a/FE/src/app/features/header/header.component.html
+++ b/FE/src/app/features/header/header.component.html
@@ -6,12 +6,13 @@
       <img src="/assets/icons/logo.svg" />
     </a>
 
-    <nav id="navmenu" class="navmenu d-flex align-items-center gap-5">
+    <nav #navmenu id="navmenu" class="navmenu d-flex align-items-center gap-5">
       <ul>
-        <li><a routerLink="/" class="active">Trang chủ</a></li>
+        <li><a routerLink="/">Trang chủ</a></li>
         <li><a routerLink="/">Nhà cho thuê</a></li>
-        <li><a routerLink="/">Chủ thuê</a></li>
+        <li><a routerLink="/">Người cho thuê</a></li>
         <li><a routerLink="/">Dịch vụ</a></li>
+        <li><a routerLink="/">Blog</a></li>
         <li><a routerLink="/">Liên hệ</a></li>
       </ul>
       <div class="button-group d-flex gap-1">
@@ -21,6 +22,7 @@
         <button routerLink="/" class="btn rounded-pill">
           <img src="/assets/icons/profile.svg" />
         </button>
+        <button routerLink="/" class="btn btn-dark">Đăng ký</button>
         <button routerLink="/" class="btn btn-dark">Đăng nhập</button>
       </div>
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
