--- a/FE/src/app/features/slider/slider.component.html
+++ b/FE/src/app/features/slider/slider.component.html
@@ -9,10 +9,10 @@
       <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="" />
       <div class="carousel-container">
         <div>
-          <p>Doral, Florida</p>
-          <h2><span>204</span> Olive Road Two</h2>
+          <p class="pb-2">Phòng trọ tốt bạn muốn tìm kiếm 2024</p>
+          <h2><span>HÀ NỘI</span> MỘT NƠI TUYỆT VỜI</h2>
           <a href="property-single.html" class="btn-get-started"
-            >rent | $ 12.000</a
+            >NGAY TẠI ĐÂY!</a
           >
         </div>
       </div>
@@ -23,10 +23,10 @@
       <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="" />
       <div class="carousel-container">
         <div>
-          <p>Doral, Florida</p>
-          <h2><span>247</span> Venda Road Five</h2>
+          <p class="pb-2">Nhà bao đẹp, bao sang xịn mịn</p>
+          <h2><span>2000</span> PHÒNG TRỌ ĐÃ ĐƯỢC THUÊ</h2>
           <a href="property-single.html" class="btn-get-started"
-            >sale | $ 356.000</a
+            >NGAY TẠI DÂY!</a
           >
         </div>
       </div>
@@ -37,7 +37,7 @@
       <img src="assets/img/hero-carousel/hero-carousel-3.jpg" alt="" />
       <div class="carousel-container">
         <div>
-          <p>Doral, Florida</p>
+          <p class="pb-2">Doral, Florida</p>
           <h2><span>247</span> Vitra Road three</h2>
           <a href="property-single.html" class="btn-get-started"
             >rent | $ 3.000</a
