--- a/FE/src/app/features/footer/footer.component.html
+++ b/FE/src/app/features/footer/footer.component.html
@@ -1,78 +1,44 @@
-<footer class="d-flex border-top justify-content-center">
-  <div class="container-fluid container-xl row my-5">
-    <div class="col">
-      <a
-        href="/"
-        class="d-flex align-items-center mb-3 link-dark text-decoration-none"
-      >
-        <img src="/assets/icons/logo.svg" />
-      </a>
-      <p class="text-muted">
-        Đưa bạn đến gần hơn với ngôi nhà mơ ước của mình chỉ bằng một cú nhấp
-        chuột.
-      </p>
-    </div>
+<footer id="footer" class="footer light-background">
+  <div class="container">
+    <div class="row gy-3">
+      <div class="col-lg-3 col-md-6 d-flex">
+        <i class="bi bi-geo-alt icon"></i>
+        <div class="address">
+          <h4>Address</h4>
+          <p>A108 Adam Street</p>
+          <p>New York, NY 535022</p>
+          <p></p>
+        </div>
+      </div>
 
-    <div class="col"></div>
+      <div class="col-lg-3 col-md-6 d-flex">
+        <i class="bi bi-telephone icon"></i>
+        <div>
+          <h4>Contact</h4>
+          <p><strong>Phone:</strong> <span>+1 5589 55488 55</span><br /></p>
+        </div>
+      </div>
 
-    <div class="col">
-      <h5 class="fw-bold">Về chúng tôi</h5>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">Giới thiệu</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">Blog</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">Quy chế nhà</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">Chính sách bảo mật</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">Điều khoản sử dụng</a>
-        </li>
-      </ul>
-    </div>
+      <div class="col-lg-3 col-md-6 d-flex">
+        <i class="bi bi-clock icon"></i>
+        <div>
+          <h4>Opening Hours</h4>
+          <p>
+            <strong>Mon-Sat:</strong> <span>11AM - 23PM</span><br />
+            <strong>Sunday</strong>: <span>Closed</span>
+          </p>
+        </div>
+      </div>
 
-    <div class="col">
-      <h5 class="fw-bold">Hỗ trợ</h5>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">FAQ</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">Liên hệ hỗ trợ</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">Trung tâm trợ giúp</a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="col">
-      <h5 class="fw-bold">Mạng xã hội</h5>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">
-            <i class="fa-brands fa-instagram"></i>
-            Instagram
-          </a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">
-            <i class="fa-brands fa-square-facebook"></i>
-            Facebook
-          </a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">
-            <i class="fa-brands fa-square-twitter"></i>
-            Twitter
-          </a>
-        </li>
-      </ul>
+      <div class="col-lg-3 col-md-6">
+        <h4>Follow Us</h4>
+        <div class="social-links d-flex">
+          <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        </div>
+      </div>
     </div>
   </div>
 </footer>
