--- a/FE/src/app/features/faq/faq.component.html
+++ b/FE/src/app/features/faq/faq.component.html
@@ -1,92 +1,35 @@
 <div class="container">
   <div class="row justify-content-center">
+    <!-- Faq Column -->
     <div class="col-lg-10" data-aos="fade-up" data-aos-delay="100">
       <div class="faq-container">
+        <!-- Faq item-->
         <div class="faq-item faq-active">
-          <h3>Non consectetur a erat nam at lectus urna duis?</h3>
+          <h3>Hợp đồng thuê phòng trọ Hà Nội cần lưu ý những gì?</h3>
           <div class="faq-content">
             <p>
-              Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id
-              volutpat lacus laoreet non curabitur gravida. Venenatis lectus
-              magna fringilla urna porttitor rhoncus dolor purus non.
+              Trước khi ký hợp đồng thuê trọ Hà Nội, cần chú ý: tiền cọc thuê
+              trọ, giá tiền thuê phòng trọ Hà Nội, giá điện và nước sinh hoạt,
+              thời hạn hợp đồng, số lượng người ở tối đa, quy định rõ về trách
+              nhiệm các bên.
             </p>
           </div>
           <i class="faq-toggle bi bi-chevron-right"></i>
         </div>
-        <!-- End Faq item-->
-
+        <!-- Faq item-->
         <div class="faq-item">
-          <h3>Feugiat scelerisque varius morbi enim nunc faucibus?</h3>
+          <h3>Kinh nghiệm đi thuê phòng trọ ở Hà Nội?</h3>
           <div class="faq-content">
             <p>
-              Dolor sit amet consectetur adipiscing elit pellentesque habitant
-              morbi. Id interdum velit laoreet id donec ultrices. Fringilla
-              phasellus faucibus scelerisque eleifend donec pretium. Est
-              pellentesque elit ullamcorper dignissim. Mauris ultrices eros in
-              cursus turpis massa tincidunt dui.
+              Cần xác định vị trí thuê phòng trọ ở Hà Nội để có thể thuận tiện
+              di chuyển đi học và đi làm; Ưu tiên chọn các khu vực an ninh, có
+              bãi giữ xe; Kiểm tra kỹ các thiết bị vật dụng trước khi dọn vào;
+              Đọc thật kỹ hợp đồng trước khi ký.
             </p>
           </div>
           <i class="faq-toggle bi bi-chevron-right"></i>
         </div>
-        <!-- End Faq item-->
-
-        <div class="faq-item">
-          <h3>Dolor sit amet consectetur adipiscing elit pellentesque?</h3>
-          <div class="faq-content">
-            <p>
-              Eleifend mi in nulla posuere sollicitudin aliquam ultrices
-              sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla
-              pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque
-              eu tincidunt. Lectus urna duis convallis convallis tellus. Urna
-              molestie at elementum eu facilisis sed odio morbi quis
-            </p>
-          </div>
-          <i class="faq-toggle bi bi-chevron-right"></i>
-        </div>
-        <!-- End Faq item-->
-
-        <div class="faq-item">
-          <h3>Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?</h3>
-          <div class="faq-content">
-            <p>
-              Dolor sit amet consectetur adipiscing elit pellentesque habitant
-              morbi. Id interdum velit laoreet id donec ultrices. Fringilla
-              phasellus faucibus scelerisque eleifend donec pretium. Est
-              pellentesque elit ullamcorper dignissim. Mauris ultrices eros in
-              cursus turpis massa tincidunt dui.
-            </p>
-          </div>
-          <i class="faq-toggle bi bi-chevron-right"></i>
-        </div>
-        <!-- End Faq item-->
-
-        <div class="faq-item">
-          <h3>Tempus quam pellentesque nec nam aliquam sem et tortor?</h3>
-          <div class="faq-content">
-            <p>
-              Molestie a iaculis at erat pellentesque adipiscing commodo.
-              Dignissim suspendisse in est ante in. Nunc vel risus commodo
-              viverra maecenas accumsan. Sit amet nisl suscipit adipiscing
-              bibendum est. Purus gravida quis blandit turpis cursus in
-            </p>
-          </div>
-          <i class="faq-toggle bi bi-chevron-right"></i>
-        </div>
-        <!-- End Faq item-->
-
-        <div class="faq-item">
-          <h3>Perspiciatis quod quo quos nulla quo illum ullam?</h3>
-          <div class="faq-content">
-            <p>
-              Enim ea facilis quaerat voluptas quidem et dolorem. Quis et
-              consequatur non sed in suscipit sequi. Distinctio ipsam dolore et.
-            </p>
-          </div>
-          <i class="faq-toggle bi bi-chevron-right"></i>
-        </div>
-        <!-- End Faq item-->
       </div>
     </div>
-    <!-- End Faq Column-->
   </div>
 </div>
