--- a/FE/src/app/features/post/components/post-list/post-list.component.html
+++ b/FE/src/app/features/post/components/post-list/post-list.component.html
@@ -1,1 +1,11 @@
-<p>post-list works!</p>
+<div class="row gy-4">
+  <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+    <app-post-item></app-post-item>
+  </div>
+  <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+    <app-post-item></app-post-item>
+  </div>
+  <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+    <app-post-item></app-post-item>
+  </div>
+</div>
