--- a/FE/src/app/features/service/components/service-item/service-item.component.html
+++ b/FE/src/app/features/service/components/service-item/service-item.component.html
@@ -1,12 +1,13 @@
 <div class="service-item position-relative">
   <div class="icon">
-    <i class="bi bi-activity"></i>
+    <i class="fa-solid fa-broom"></i>
   </div>
   <a href="service-details.html" class="stretched-link">
-    <h3>Nesciunt Mete</h3>
+    <h3>Dọn phòng</h3>
   </a>
   <p>
-    Provident nihil minus qui consequatur non omnis maiores. Eos accusantium
-    minus dolores iure perferendis tempore et consequatur.
+    Dịch vụ dọn phòng chuyên nghiệp, đảm bảo không gian sống của bạn luôn sạch
+    sẽ và thoải mái. Nhân viên được đào tạo kỹ lưỡng sẽ dọn dẹp phòng theo lịch
+    bạn chọn, sử dụng các sản phẩm vệ sinh an toàn và thân thiện với môi trường.
   </p>
 </div>
