--- a/FE/src/app/features/post/components/post-item/post-item.component.html
+++ b/FE/src/app/features/post/components/post-item/post-item.component.html
@@ -1,62 +1,26 @@
-<div class="card overflow-hidden mb-3">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <ngb-carousel>
-        @for (image of images; track $index;) {
-        <ng-template ngbSlide>
-          <img [src]="image.url" class="img-fluid rounded-start" />
-          <div class="carousel-caption d-none d-md-block">
-            <h5 class="text-white">{{ image.title }}</h5>
-            <p>{{ image.description }}</p>
-          </div>
-        </ng-template>
-        }
-      </ngb-carousel>
-    </div>
-    <div class="col-md-8">
-      <div class="card-body d-flex flex-column h-100">
-        <div class="d-flex">
-          <h5 class="card-title flex-fill">Tiêu đề bài đăng</h5>
-          <div class="btn btn-light">
-            <app-like></app-like>
-          </div>
-        </div>
-        <div class="d-flex">
-          <span class="card-text text-danger fw-bold pe-2">4 triệu/tháng</span>
-          <span class="card-text fw-bold pe-2">30m2</span>
-          <span class="card-text pe-2">
-            {{ 1 }}
-            <i class="fa-solid fa-bed pe-2"></i>
-          </span>
-          <span class="card-text">
-            {{ 1 }}
-            <i class="fa-solid fa-bath"></i>
-          </span>
-        </div>
-        <div class="card-text text-muted py-1">
-          <i class="fa-solid fa-location-dot"></i>
-          Tây Hồ, Hà Nội
-        </div>
-        <div class="card-text flex-fill pt-3">
-          <p class="text-muted multi-truncate">
-            Luxurious VIP room with modern amenities and stunning views. Perfect
-            for a comfortable and memorable stay. You can relay on our amazing
-            features list and also our customer services will be great
-            experience for you without doubt and in no-time Luxurious VIP room
-            with modern amenities and stunning views. Perfect for a comfortable
-            and memorable stay. You can relay on our amazing features list and
-            also our customer services will be great experience for you without
-            doubt and in no-time
-          </p>
-        </div>
-        <div class="d-flex">
-          <p class="card-text flex-fill">
-            <small class="text-body-secondary">Last updated 3 mins ago</small>
-          </p>
-          <a href="#" class="readmore"
-            >Xem chi tiết <i class="bi bi-arrow-right"></i
-          ></a>
-        </div>
+<div class="card">
+  <img src="assets/img/properties/property-1.jpg" alt="" class="img-fluid" />
+  <div class="card-body">
+    <span class="sale-rent">Rent | $1200</span>
+    <h3>
+      <a href="property-single.html" class="stretched-link"
+        >204 Mount Olive Road Two</a
+      >
+    </h3>
+    <div
+      class="card-content d-flex flex-column justify-content-center text-center"
+    >
+      <div class="row propery-info">
+        <div class="col">Area</div>
+        <div class="col">Beds</div>
+        <div class="col">Baths</div>
+        <div class="col">Garages</div>
+      </div>
+      <div class="row">
+        <div class="col">340m2</div>
+        <div class="col">5</div>
+        <div class="col">2</div>
+        <div class="col">1</div>
       </div>
     </div>
   </div>
