--- a/FE/src/app/pages/contact-page/contact-page.component.html
+++ b/FE/src/app/pages/contact-page/contact-page.component.html
@@ -1,5 +1,6 @@
 <div class="contact-page">
-  <app-header></app-header>
+  <!-- Header -->
+  <app-header [underline]="5"></app-header>
 
   <main class="main">
     <!-- Page Title -->
@@ -28,11 +29,11 @@
         </div>
       </nav>
     </div>
-    <!-- End Page Title -->
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <!-- Google Maps -->
         <div class="mb-4" data-aos="fade-up" data-aos-delay="200">
           <iframe
             style="border: 0; width: 100%; height: 270px"
@@ -43,47 +44,48 @@
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
         </div>
-        <!-- End Google Maps -->
-
+        <!-- Contact -->
         <div class="row gy-4">
+          <!-- Info -->
           <div class="col-lg-4">
+            <!-- Info Item -->
             <div
               class="info-item d-flex"
               data-aos="fade-up"
               data-aos-delay="300"
             >
-              <i class="bi bi-geo-alt flex-shrink-0"></i>
+              <i class="fa-solid fa-location-dot"></i>
               <div>
-                <h3>Address</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h3>Địa chỉ</h3>
+                <p>Minh Khai, Bắc Từ Liêm, Hà Nội, Việt Nam</p>
               </div>
             </div>
-            <!-- End Info Item -->
 
+            <!-- Info Item -->
             <div
               class="info-item d-flex"
               data-aos="fade-up"
               data-aos-delay="400"
             >
-              <i class="bi bi-telephone flex-shrink-0"></i>
+              <i class="fa-solid fa-phone"></i>
               <div>
-                <h3>Call Us</h3>
-                <p>+1 5589 55488 55</p>
+                <h3>Số điện thoại</h3>
+                <p>0352697136</p>
               </div>
             </div>
-            <!-- End Info Item -->
 
+            <!-- Info Item -->
             <div
               class="info-item d-flex"
               data-aos="fade-up"
               data-aos-delay="500"
             >
-              <i class="bi bi-envelope flex-shrink-0"></i>
+              <i class="fa-regular fa-envelope"></i>
               <div>
                 <h3>Email Us</h3>
+                <p>{{ "caosyminhhoang@gmail.com" }}</p>
               </div>
             </div>
-            <!-- End Info Item -->
           </div>
 
           <div class="col-lg-8">
@@ -100,7 +102,7 @@
                     type="text"
                     name="name"
                     class="form-control"
-                    placeholder="Your Name"
+                    placeholder="Họ và tên"
                     required=""
                   />
                 </div>
@@ -110,7 +112,7 @@
                     type="email"
                     class="form-control"
                     name="email"
-                    placeholder="Your Email"
+                    placeholder="Email"
                     required=""
                   />
                 </div>
@@ -120,7 +122,7 @@
                     type="text"
                     class="form-control"
                     name="subject"
-                    placeholder="Subject"
+                    placeholder="Tiêu đề"
                     required=""
                   />
                 </div>
@@ -130,7 +132,7 @@
                     class="form-control"
                     name="message"
                     rows="6"
-                    placeholder="Message"
+                    placeholder="Lời nhắn"
                     required=""
                   ></textarea>
                 </div>
@@ -142,20 +144,18 @@
                     Your message has been sent. Thank you!
                   </div>
 
-                  <button type="submit">Send Message</button>
+                  <button type="submit">Gửi</button>
                 </div>
               </div>
             </form>
           </div>
-          <!-- End Contact Form -->
         </div>
       </div>
     </section>
-    <!-- /Contact Section -->
   </main>
 
+  <!-- Footer -->
   <app-footer></app-footer>
-
   <!-- Scroll Top -->
   <app-scroll-top></app-scroll-top>
   <!-- Preloader -->
