--- a/FE/src/app/pages/service-page/service-page.component.html
+++ b/FE/src/app/pages/service-page/service-page.component.html
@@ -1,4 +1,5 @@
 <div class="services-page">
+  <!-- Header -->
   <app-header [underline]="4"></app-header>
 
   <main class="main">
@@ -28,32 +29,27 @@
         </div>
       </nav>
     </div>
-    <!-- End Page Title -->
 
     <!-- Services Section -->
-
     <section id="services" class="services section">
       <app-service-list></app-service-list>
     </section>
-    <!-- /Services Section -->
 
     <!-- Faq Section -->
     <section id="faq" class="faq section">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Các câu hỏi thường gặp</h2>
+        <h2>Những câu hỏi thường gặp</h2>
       </div>
-      <!-- End Section Title -->
+      <!-- Faq -->
       <app-faq></app-faq>
     </section>
-    <!-- /Faq Section -->
   </main>
 
+  <!-- Footer -->
   <app-footer></app-footer>
-
   <!-- Scroll Top -->
   <app-scroll-top></app-scroll-top>
-
   <!-- Preloader -->
   <div id="preloader"></div>
 </div>
