--- a/FE/src/app/features/header/header.component.html
+++ b/FE/src/app/features/header/header.component.html
@@ -9,10 +9,10 @@
     <nav #navmenu id="navmenu" class="navmenu d-flex align-items-center gap-5">
       <ul>
         <li><a routerLink="/">Trang chủ</a></li>
-        <li><a routerLink="/">Nhà cho thuê</a></li>
-        <li><a routerLink="/">Người cho thuê</a></li>
-        <li><a routerLink="/">Dịch vụ</a></li>
-        <li><a routerLink="/">Liên hệ</a></li>
+        <li><a routerLink="/apartment">Nhà cho thuê</a></li>
+        <li><a routerLink="/lessor">Người cho thuê</a></li>
+        <li><a routerLink="/service">Dịch vụ</a></li>
+        <li><a routerLink="/contact">Liên hệ</a></li>
       </ul>
       <div class="button-group d-flex gap-2">
         <button
