--- a/FE/src/app/app.component.html
+++ b/FE/src/app/app.component.html
@@ -1,1 +1,12 @@
-<router-outlet></router-outlet>
+<ng-container>
+  <!-- Header -->
+  <app-header></app-header>
+  <!-- Router -->
+  <router-outlet></router-outlet>
+  <!-- Footer -->
+  <app-footer></app-footer>
+  <!-- Scroll Top -->
+  <app-scroll-top></app-scroll-top>
+  <!-- Preloader -->
+  <app-preloader></app-preloader>
+</ng-container>
