--- a/FE/src/app/features/home/components/home-slide/home-slide.component.html
+++ b/FE/src/app/features/home/components/home-slide/home-slide.component.html
@@ -1,4 +1,4 @@
-<section id="hero" class="hero section dark-background">
+<section #hero id="hero" class="hero section dark-background">
   <div
     id="hero-carousel"
     class="carousel slide"
