--- a/FE/src/app/pages/lessor-page/lessor-page.component.html
+++ b/FE/src/app/pages/lessor-page/lessor-page.component.html
@@ -31,11 +31,13 @@
     <div class="mt-2" data-aos="fade-up">
       <app-lessor-filter></app-lessor-filter>
     </div>
-
+    
     <!-- Lessor Section -->
     <section id="agents" class="agents section">
       <!-- Lessor List -->
-      <app-lessor-list></app-lessor-list>
+      <div class="container" data-aos="fade-up">
+        <app-lessor-list></app-lessor-list>
+      </div>
       <!-- Pagination -->
       <app-pagination></app-pagination>
     </section>
