--- a/FE/src/app/pages/service-page/service-page.component.html
+++ b/FE/src/app/pages/service-page/service-page.component.html
@@ -29,7 +29,9 @@
 
     <!-- Services Section -->
     <section id="services" class="services section">
-      <app-service-list></app-service-list>
+      <div class="container" data-aos="fade-up">
+        <app-service-list></app-service-list>
+      </div>
     </section>
 
     <!-- Faq Section -->
