--- a/FE/src/app/pages/contact-page/contact-page.component.html
+++ b/FE/src/app/pages/contact-page/contact-page.component.html
@@ -29,9 +29,9 @@
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="container" data-aos="fade-up">
         <!-- Google Maps -->
-        <div class="mb-4" data-aos="fade-up" data-aos-delay="200">
+        <div class="mb-4" data-aos="fade-up" data-aos-delay="100">
           <iframe
             style="border: 0; width: 100%; height: 270px"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6302.779672852919!2d105.73445228917237!3d21.05315092240872!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313454f9de2328cf%3A0xc5685fbea9808d8e!2zTmd1ecOqbiBYw6EsIE1pbmggS2hhaSwgQuG6r2MgVOG7qyBMacOqbSwgSMOgIE7hu5lpLCBWaeG7h3QgTmFt!5e1!3m2!1svi!2s!4v1727938150446!5m2!1svi!2s"
@@ -49,7 +49,7 @@
             <div
               class="info-item d-flex"
               data-aos="fade-up"
-              data-aos-delay="300"
+              data-aos-delay="100"
             >
               <i class="fa-solid fa-location-dot"></i>
               <div>
@@ -62,7 +62,7 @@
             <div
               class="info-item d-flex"
               data-aos="fade-up"
-              data-aos-delay="400"
+              data-aos-delay="200"
             >
               <i class="fa-solid fa-phone"></i>
               <div>
@@ -75,7 +75,7 @@
             <div
               class="info-item d-flex"
               data-aos="fade-up"
-              data-aos-delay="500"
+              data-aos-delay="300"
             >
               <i class="fa-regular fa-envelope"></i>
               <div>
@@ -91,9 +91,9 @@
               method="post"
               class="php-email-form"
               data-aos="fade-up"
-              data-aos-delay="200"
+              data-aos-delay="100"
             >
-              <div class="row gy-4">
+              <div class="row gy-4" >
                 <div class="col-md-6">
                   <input
                     type="text"
