--- a/FE/src/app/pages/home-page/home-page.component.html
+++ b/FE/src/app/pages/home-page/home-page.component.html
@@ -10,7 +10,9 @@
         <h2>Dịch vụ của chúng tôi</h2>
       </div>
       <!-- Service List -->
-      <app-service-list></app-service-list>
+      <div class="container" data-aos="fade-up">
+        <app-service-list></app-service-list>
+      </div>
     </section>
 
     <!-- Post Recent Section -->
@@ -20,7 +22,9 @@
         <h2>Những bài đăng gần đây</h2>
       </div>
       <!-- Recent Posts -->
-      <app-post-list></app-post-list>
+      <div class="container" data-aos="fade-up">
+        <app-post-list></app-post-list>
+      </div>
     </section>
 
     <!-- Rentaler Section -->
@@ -30,7 +34,9 @@
         <h2>Người cho thuê được yêu thích nhất</h2>
       </div>
       <!-- Rentaler List -->
-      <app-lessor-list></app-lessor-list>
+      <div class="container" data-aos="fade-up">
+        <app-lessor-list></app-lessor-list>
+      </div>
     </section>
     <!-- Stats Section -->
     <app-home-stats></app-home-stats>
@@ -41,7 +47,9 @@
         <h2>Mọi người nói gì về chúng tôi</h2>
       </div>
       <!-- Feedback Swiper -->
-      <app-home-feedback></app-home-feedback>
+      <div class="container" data-aos="fade-up">
+        <app-home-feedback></app-home-feedback>
+      </div>
     </section>
   </main>
 </div>
