--- a/FE/src/app/core/auth/components/register-form/register-form.component.html
+++ b/FE/src/app/core/auth/components/register-form/register-form.component.html
@@ -2,7 +2,7 @@
   <div
     class="d-flex align-items-center justify-content-center justify-content-lg-start"
   >
-    <p class="lead fw-normal mb-0 me-3">Đăng ký bằng</p>
+    <p class="lead fw-bold mb-0 me-3">Đăng ký {{ title }} bằng</p>
     <button type="button" routerLink="/" class="btn btn-primary mx-1">
       <i class="fab fa-facebook-f"></i>
     </button>
@@ -25,44 +25,45 @@
     }
   </mat-form-field>
 
-  <div class="row">
-    <!-- Lastname input -->
+  <div class="row align-items-center">
+    <!-- Fullname input -->
     <mat-form-field class="col-lg-6" appearance="outline">
-      <mat-label>Họ</mat-label>
-      <input matInput type="text" placeholder="Họ" formControlName="lastname" />
-      @if( lastname?.invalid && (lastname?.dirty || lastname?.touched) ){
-      <mat-error>{{ errorForLastname() }}</mat-error>
-      }
-    </mat-form-field>
-    <!-- Fistname input -->
-    <mat-form-field class="col-lg-6" appearance="outline">
-      <mat-label>Tên</mat-label>
+      <mat-label>Họ và tên</mat-label>
       <input
         matInput
         type="text"
-        placeholder="Tên"
-        formControlName="firstname"
+        placeholder="Họ và tên"
+        formControlName="fullname"
       />
-      @if( firstname?.invalid && (firstname?.dirty || firstname?.touched) ){
-      <mat-error>{{ errorForFirstname() }}</mat-error>
+      @if( fullname?.invalid && (fullname?.dirty || fullname?.touched) ){
+      <mat-error>{{ errorForFullname() }}</mat-error>
       }
     </mat-form-field>
-  </div>
-
-  <div class="row">
     <!-- Phone Number input -->
-    <mat-form-field class="col" appearance="outline">
+    <mat-form-field class="col-lg-6" appearance="outline">
       <mat-label>Số điện thoại</mat-label>
       <input
         matInput
         type="text"
         placeholder="Số điện thoại"
-        formControlName="phone"
+        formControlName="phoneNumber"
       />
-      @if( phone?.invalid && (phone?.dirty || phone?.touched) ){
-      <mat-error>{{ errorForPhone() }}</mat-error>
+      @if( phoneNumber?.invalid && (phoneNumber?.dirty || phoneNumber?.touched) ){
+      <mat-error>{{ errorForPhoneNumber() }}</mat-error>
       }
     </mat-form-field>
+  </div>
+
+  <div class="row">
+    <!-- Gender radio -->
+    <mat-radio-group
+      class="col d-flex align-items-center pb-3"
+      formControlName="gender"
+    >
+      <mat-radio-button value="0">Nam</mat-radio-button>
+      <mat-radio-button value="1">Nữ</mat-radio-button>
+      <mat-radio-button value="2">Khác</mat-radio-button>
+    </mat-radio-group>
     <!-- Birthday input -->
     <mat-form-field class="col" appearance="outline">
       <mat-label>Ngày sinh</mat-label>
@@ -70,7 +71,7 @@
         matInput
         [matDatepicker]="picker"
         placeholder="MM/DD/YYYY"
-        formControlName="birthday"
+        formControlName="dateOfBirth"
       />
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
@@ -125,6 +126,7 @@
   <div class="text-center text-lg-start mt-3">
     <button
       type="button"
+      [disabled]="form.invalid"
       (click)="onRegister()"
       class="btn btn-lg btn-dark w-100"
     >
@@ -132,7 +134,7 @@
     </button>
     <p class="small fw-bold mt-3">
       Bạn đã có tài khoản?
-      <a [routerLink]="['/login']" class="link-primary">Đăng nhập</a>
+      <a [routerLink]="[control + '/login']" class="link-primary">Đăng nhập</a>
     </p>
   </div>
 </form>
