--- a/FE/src/app/features/contact/pages/contact/contact.component.html
+++ b/FE/src/app/features/contact/pages/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div class="contact-page">
   <!-- Header -->
-  <app-header [underline]="5"></app-header>
+  <app-header></app-header>
   <main class="main">
     <!-- Page Title -->
     <div class="page-title" data-aos="fade">
