--- a/FE/src/app/features/home/pages/home/home.component.html
+++ b/FE/src/app/features/home/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="index-page">
   <!-- Header -->
-  <app-header [underline]="1"></app-header>
+  <app-header></app-header>
   <main class="main">
     <!-- Hero Section -->
     <app-home-slide></app-home-slide>
