--- a/FE/src/styles.scss
+++ b/FE/src/styles.scss
@@ -186,6 +186,7 @@ h6 {
   # Global Header
   --------------------------------------------------------------*/
 .header {
+  height: 66px;
   color: var(--default-color);
   background-color: var(--background-color);
   padding: 15px 0;
