--- a/FE/src/app/core/layout/header/header.component.html
+++ b/FE/src/app/core/layout/header/header.component.html
@@ -8,11 +8,11 @@
 
     <nav #navmenu class="navmenu d-flex align-items-center gap-5">
       <ul>
-        <li><a routerLink="/">Trang chủ</a></li>
-        <li><a routerLink="/apartment">Nhà cho thuê</a></li>
-        <li><a routerLink="/lessor">Người cho thuê</a></li>
-        <li><a routerLink="/service">Dịch vụ</a></li>
-        <li><a routerLink="/contact">Liên hệ</a></li>
+        <li><a routerLink="/" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{ exact: true }">Trang chủ</a></li>
+        <li><a routerLink="/apartment" [routerLinkActive]="'active'">Nhà cho thuê</a></li>
+        <li><a routerLink="/lessor" [routerLinkActive]="'active'">Người cho thuê</a></li>
+        <li><a routerLink="/service" [routerLinkActive]="'active'">Dịch vụ</a></li>
+        <li><a routerLink="/contact" [routerLinkActive]="'active'">Liên hệ</a></li>
       </ul>
       <div class="btn-navmenu d-flex gap-2">
         <button routerLink="/" class="btn btn-dark fs-4 border-0 rounded-pill">
@@ -35,9 +35,10 @@
             >
               <i class="bi bi-person-fill"></i>
             </button>
-            <p class="fw-bold m-0" *ngIf="user$ | async as user">
+            <a class="fw-bold link-opacity-75-hover" *ngIf="user$ | async as user">
               {{ user.fullName }}
-            </p>
+              <i class="fa-solid fa-square-caret-down"></i>
+            </a>
             <mat-menu #menu="matMenu" class="profile-dropdown">
               <div class="px-2">
                 <button mat-menu-item>Edit Profile</button>
@@ -47,12 +48,18 @@
               </div>
               <hr />
               <div class="px-2">
-                <button mat-flat-button (click)="onLogout()" color="warn" class="w-100 text-white">
+                <button
+                  mat-flat-button
+                  (click)="onLogout()"
+                  color="warn"
+                  class="w-100 text-white"
+                >
                   Đăng xuất
                 </button>
               </div>
             </mat-menu>
           </div>
+          
         </div>
         <div *appIfAuthenticated="false" class="d-flex gap-2">
           <button routerLink="/register" class="btn btn-dark">Đăng ký</button>
