--- a/FE/src/app/features/apartment/pages/apartment/apartment.component.html
+++ b/FE/src/app/features/apartment/pages/apartment/apartment.component.html
@@ -1,6 +1,6 @@
 <div class="properties-page">
   <!-- Header -->
-  <app-header [underline]="2"></app-header>
+  <app-header></app-header>
   <main class="main">
     <!-- Page Title -->
     <div class="page-title" data-aos="fade">
