--- a/FE/src/app/features/lessor/pages/lessor/lessor.component.html
+++ b/FE/src/app/features/lessor/pages/lessor/lessor.component.html
@@ -1,6 +1,6 @@
 <div class="agents-page">
   <!-- Header -->
-  <app-header [underline]="3"></app-header>
+  <app-header></app-header>
   <main class="main">
     <!-- Page Title -->
     <div class="page-title" data-aos="fade">
