--- a/FE/src/app/features/service/pages/service/service.component.html
+++ b/FE/src/app/features/service/pages/service/service.component.html
@@ -1,6 +1,6 @@
 <div class="services-page">
   <!-- Header -->
-  <app-header [underline]="4"></app-header>
+  <app-header></app-header>
   <main class="main">
     <!-- Page Title -->
     <div class="page-title" data-aos="fade">
